Crash in [@ mozilla::DAV1DDecoder::ReleaseDataBuffer]
Categories
(Core :: Audio/Video: Playback, defect, P1)
Tracking
()
People
(Reporter: marcia, Assigned: achronop)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
47 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
This bug is for crash report bp-111927c8-d015-4873-998b-e26110190329.
Lone crash so far on the 3-29 nightly. The crash has Moz crash reason: MOZ_RELEASE_ASSERT(((bool)(__builtin_expect(!!(!NS_FAILED_impl(rv)), 1))))
Top 10 frames of crashing thread:
0 xul.dll void mozilla::DAV1DDecoder::ReleaseDataBuffer dom/media/platforms/agnostic/DAV1DDecoder.cpp:76
1 xul.dll dav1d_ref_dec third_party/dav1d/src/ref.c:83
2 xul.dll dav1d_data_unref_internal third_party/dav1d/src/data.c:143
3 xul.dll dav1d_flush third_party/dav1d/src/lib.c:384
4 xul.dll static void close_internal third_party/dav1d/src/lib.c:437
5 xul.dll static class RefPtr<mozilla::MozPromise<bool, bool, 0> > mozilla::DAV1DDecoder::Shutdown::<unnamed-tag>::operator dom/media/platforms/agnostic/DAV1DDecoder.cpp:259
6 xul.dll nsresult mozilla::detail::ProxyFunctionRunnable<`lambda at z:/task_1553853102/build/src/dom/media/platforms/agnostic/DAV1DDecoder.cpp:258:44', mozilla::MozPromise<bool, bool, 0> >::Run xpcom/threads/MozPromise.h:1419
7 xul.dll nsresult mozilla::TaskQueue::Runner::Run xpcom/threads/TaskQueue.cpp:199
8 xul.dll nsresult nsThreadPool::Run xpcom/threads/nsThreadPool.cpp:244
9 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1180
Comment 1•6 years ago
|
||
The failing assertion has been added in patch for bug 1493400.
:achronop, could you investigate please ?
Assignee | ||
Comment 2•6 years ago
|
||
Assignee | ||
Comment 3•6 years ago
|
||
Assignee | ||
Comment 4•6 years ago
|
||
On going try run:
https://treeherder.mozilla.org/#/jobs?repo=try&revision=461e7f2fac857c70ea1f9e34594f9629be76f67e
Updated•6 years ago
|
Updated•6 years ago
|
Comment 7•6 years ago
|
||
bugherder |
Assignee | ||
Comment 8•6 years ago
|
||
[Tracking Requested - why for this release]:
This should be possible in beta too. The code fixed is identical between Nightly and beta.
Assignee | ||
Comment 9•6 years ago
|
||
Comment on attachment 9054828 [details]
Bug 1540231 - Stop dispatching a task to the TaskQueue when we are already in it. r?jya
Beta/Release Uplift Approval Request
- Feature/Bug causing the regression: Bug 1493400
- User impact if declined: Crash during AV1 palyback
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): It's a small change and it has been verified on Nightly.
- String changes made/needed:
Updated•6 years ago
|
Comment 10•6 years ago
|
||
Comment on attachment 9054828 [details]
Bug 1540231 - Stop dispatching a task to the TaskQueue when we are already in it. r?jya
Crash fix for Dav1d playback, crashes stopped on Nightly just after the patch landed, uplift approved for 67 beta 9, thanks.
Comment 11•6 years ago
|
||
bugherder uplift |
Updated•6 years ago
|
Updated•6 years ago
|
Description
•