Bug 1540231 - Stop dispatching a task to the TaskQueue when we are already in it. r=jya a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D25576

--HG--
extra : source : e1ec2362ecb9193ca4c274a708145c6386c75270